# RobotArm-AL5D

./: .gitignore  README.md
Arduino_Firmware_SingleDoF/: Arduino_Firmware_SingleDoF.ino
Arduino_Firmware_SingleDoF/Code/: .gitignore  CMakeLists.txt  CRobotHighLevel.cpp  CRobotHighLevel.h  CRobotLowLevel.h  main.cpp
Code/: .gitignore  CMakeLists  CRobotHighLevel.cpp  CRobotLowLevel.cpp  CRobotLowLevel.h  main.cpp
Code/RobotArmController/: CMakeLists.txt  package.xml
Code/src/: CTestConfiguration.ini
Code/src/RobotArmController/src/RobotHighLevel/: CCalibration.cpp  CCalibration.h  CConfiguration.cpp  CConfiguration.h  CMakeLists.txt  CMove.cpp  CMove.h
Doc/: Component_Diagram_Interface_BP.uxf  Domain_Model.uxf  Protocol_State_Machine.uxf  State_Machine.uxf  State_Machine_AL5D.uxf  System_Context.uxf  Timing_Diagram.uxf  Use_Case_Interface_BP.uxf  class_highlevel.uxf  class_lowlevel.uxf  class_robotarmcontroller.uxf
Doc/html/: CCalibration_8cpp.html  CCalibration_8cpp__incl.map  CCalibration_8cpp__incl.md5  CCalibration_8h.html  CCalibration_8h__dep__incl.map  CCalibration_8h__dep__incl.md5  CCalibration_8h__incl.map  CCalibration_8h__incl.md5  CCalibration_8h_source.html  CCommandAL5D_8cpp.html  CCommandAL5D_8cpp__incl.map  CCommandAL5D_8cpp__incl.md5  CCommandAL5D_8h.html  CCommandAL5D_8h__dep__incl.map  CCommandAL5D_8h__dep__incl.md5  CCommandAL5D_8h__incl.map  CCommandAL5D_8h__incl.md5  CCommandAL5D_8h_source.html  CCommunicate_8cpp.html  CCommunicate_8cpp__incl.map  CCommunicate_8cpp__incl.md5  CCommunicate_8h.html  CCommunicate_8h__dep__incl.map  (+142 more)
(+123 files in other folders)
